WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69247
[GTK] Fix memory leak when loading url
https://bugs.webkit.org/show_bug.cgi?id=69247
Summary
[GTK] Fix memory leak when loading url
Carlos Garcia Campos
Reported
2011-10-03 04:03:21 PDT
We are leaking the url created with WKURLCreateWithUTF8CString() when loading pages in GTK+ API and MiniBrowser
Attachments
Patch
(3.42 KB, patch)
2011-10-03 04:05 PDT
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-10-03 04:05:44 PDT
Created
attachment 109465
[details]
Patch
Martin Robinson
Comment 2
2011-10-03 08:49:56 PDT
Comment on
attachment 109465
[details]
Patch Excellent.
Carlos Garcia Campos
Comment 3
2011-10-03 09:17:02 PDT
Committed
r96508
: <
http://trac.webkit.org/changeset/96508
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug