[GTK] Fix memory leak when loading url https://bugs.webkit.org/show_bug.cgi?id=69247

Reviewed by Martin Robinson.

Release URL created with WKURLCreateWithUTF8CString().

Source/WebKit2:

* UIProcess/API/gtk/WebKitWebView.cpp:
(webkit_web_view_load_uri):

Tools:

* MiniBrowser/gtk/BrowserWindow.c:
(activateUriEntryCallback):
* MiniBrowser/gtk/main.c:
(loadURI):

Canonical link: https://commits.webkit.org/85270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96508 268f45cc-cd09-0410-ab3c-d52691b4dbfc